--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -47,6 +47,7 @@
 \newcommand{\eeq}{\end{eqnarray}}  
 \newcommand{\zz}{$z\sim 3$} 
 \newcommand{\apj}{ApJ}  
+\newcommand{\jcap}{JCAP}  
 \newcommand{\apjs}{ApJS}  
 \newcommand{\apjl}{ApJL}  
 \newcommand{\aj}{AJ}  
@@ -106,10 +107,10 @@
 %		FRONT MATTER
 %=========================================================================
 \title{A new method to estimate dark matter halo concentrations}
-\author[C. Poveda, J.E. Forero-Romero & J.C. Mu\~noz-Cuartas]{
+\author[C. Poveda, J.E. Forero-Romero, J.C. Mu\~noz-Cuartas]{
 \parbox[t]{\textwidth}{\raggedright 
-  C. Poveda \thanks{cn.poveda542@uniandes.edu.co}$^{1}$,
-  J. E. Forero-Romero \thanks{je.forero@uniandes.edu.co}$^{1}$,
+  C. Poveda \thanks{cn.poveda542@uniandes.edu.co}$^{1}$
+  J. E. Forero-Romero \thanks{je.forero@uniandes.edu.co}$^{1}$
   J. C. Mu\~noz-Cuartas \thanks{xxxx@udea.edu.co}$^{2}$
 }
 \vspace*{6pt}\\
@@ -161,13 +162,107 @@ Methods: data analysis - numerical - N-body simulations
 \section{Introduction}
 \label{sec:introduction}
 %*************************************************************************
+In the concordance cosmological paradigm the matter content of the
+Universe is dominated by dark matter, a collisionless fluid shaped by
+gravitational interactions.
+In the last three decades simulations of dark matter dominated
+universes have provided valuable insights into the large scale
+structure formation process, showing a remarkable success in the
+comparison between theoretical results and observations of the
+galaxy distribution obtained from surveys.
+\citep{Springel2005,2011ApJ...740..102K}.
 
+
+On galactic scales the most striking result is that dark matter
+overdensities closely follow a universal density profile. 
+In a first approximation this profile is spherically symmetric and its
+density only dependens on the radial coordinate.
+The universality of this profiles seems to be independent of the
+cosmological parameters and is self-similar for different spatial
+scales after an adequate re-scaling is applied. 
 \citep{NFW,Taylor2001}
+
+One the most popular parameterization for a dark matter halo radial
+density distribution is the Navarro-Frenk-White (NFW) profile
+\citep{NFW}.
+This profile is a double power law in radius, where the transition break
+happens at the so-called scale radius, $r_s$.
+The ratio between the scale radius and the virial radius $R_v$, which
+defines a natural scale for the halo, is known as the concentration
+$c=R_v/r_s$. 
+Simulations also show that the concentration is a strong function of
+halo mass and redshift. 
+
+However, high resolution simulations of Milky Way sized dark matter halos
+\citep{Navarro2010} show that the universality property is not
+perfect and that a better fitting parameterization to the radial
+density profile is provided by the Einasto profile
+\citep{Einasto1965}.
+Nevertheless, the NFW density profile and its concentration have
+become a standard metric to describe the structure of dark matter
+halos. 
+
+Observationally, the relationship between halo mass and concentration
+could provide a potential test of the Cold Dark Matter (CDM) paradigm
+on galactic scales. 
+For this motivation a great deal of effort has been
+invested in calibrating this relationship with simulations
+\citep{Neto2007,Duffy2008,Munoz2011,Prada2012,Ludlow2014} and 
+finding the best possible way to constraint it with observations
+\citep{Buote2007,Comerford2007,Mandelbaum2008,Giocoli2014,Foex2014,Shan2015}.  
+
+
+In N-body simulations there are two main methods to estimate the
+concentration parameter of a dark matter halo in a N-body simulation.
+The first method takes the particles composing the halos
+and bins them in logarithmic radii to estimate the density in each
+bin, then it proceeds to fit the density as a function of the radius
+to the NFW profile.
+A second method uses an analytic property of the
+NFW profile that relates the maximum of the ratio of the circular velocity to
+the virial velocity.
+The concentration can be then found as the root of a algebraic 
+equation dependent on this maximum value.
+
+
+The first method is straightforward to apply but presents two
+disadvantages.
+First, it requires a large number of particles in
+order to have a proper density estimate in each bin.
+This makes the method robust only for halos with at least  $10^3$
+particles.
+The second problem is that there is not a way to estimate the optimal
+radial bin size, different choices produce different results for the
+concentration. 
+
+The second method solves the two problems mentioned above.
+It works with low particles numbers and does not involve data
+binning.
+However, it effectively takes into account only a single data point
+and discards the behaviour of the ratio $V_{\rm circ}/V_{\rm vir}$ below and
+above its maxima.
+Additionally, small fluctuations on the value of this maximum can
+yield large perturbations on the estimated concentration parameter.
+
+In this paper we propose a new method to estimate the dark matter halo
+concentration in halos from N-body simulations.
+Our method builds the cumulative mass profile from the particle
+to find the best possible concentration value fitting this
+distribution. 
+This proposal has two advantages with respect to the two methods mentioned
+above. 
+It does not involve any data binning and does not throw away data points.
+
+
+
+
 
 \bibliographystyle{mn2e}
 \bibliography{references}
 
 \end{document}
+
+
 The tracer that we use to define the voids is the fractional
 anisotropy (FA) computed from the set of eigenvalues of the tensor
 under consideration. 
