comparison plots inside manuscript

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -329,11 +329,6 @@ f(x) = \ln\left(1+x\right)-\left(\frac{x}{x+1}\right).
 The most interesting feature of Eq. (\ref{eq:profile}) is that the
 concentration is the only free parameter to describe the integrated
 mass profile.
-
-%In Figure \ref{fig:profiles} we show $m(<x)$ as
-%a function of $x$ for different values of the concentration in the range
-%$1\leq c \leq 20$.
-
  
 \subsection{Circular velocity profile}
 
@@ -537,9 +532,9 @@ accuracy between the other two methods for a high particle number.
 \label{sec:data}
 \begin{figure*}
   \begin{center}
-    \includegraphics[width=0.33\textwidth]{mass-velocity.pdf}
-    \includegraphics[width=0.33\textwidth]{mass-density.pdf}
-    \includegraphics[width=0.33\textwidth]{density-velocity.pdf}
+    \includegraphics[width=0.33\textwidth]{conc_mass_vel.pdf}
+    \includegraphics[width=0.33\textwidth]{conc_mass_dens.pdf}
+    \includegraphics[width=0.33\textwidth]{conc_dens_vel.pdf}
   \end{center}
   \caption{Comparison between the concentrations measured by our
     method and the maximum velocity (left) and density (middle)
